--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,12 @@
 			<version>1.18.18</version>
 			<scope>compile</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.1</version>
+		    </dependency>
+		</dependencies>
 	<build>
 		<plugins>
 			<plugin>
