--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,18 @@
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.9.1</version>
 			</plugin>
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-site-plugin</artifactId>
+			  <version>3.9.1</version>
+			  <dependencies>
+			    <dependency>
+			      <groupId>org.apache.maven.wagon</groupId>
+			      <artifactId>wagon-ssh</artifactId>
+			      <version>3.4.2</version>
+			    </dependency>
+			  </dependencies>
+			</plugin>
 		</plugins>
 	</build>
 	<reporting>
@@ -121,4 +133,10 @@
 			</plugin>
 		</plugins>
 	</reporting>
+	<distributionManagement>
+	  <site>
+	    <id>shrek</id>
+	    <url>scp://@shrek.unideb.hu:2222/home/danielberes/public_html/${project.artifactId}</url>
+	  </site>
+	</distributionManagement>
 </project>
